# human_arm_imitation

./: LICENSE  README.md
arm_imitation/: CMakeLists.txt  package.xml
arm_imitation/launch/: check_urdf.launch  config.rviz  gaz.launch  xacro.launch
arm_imitation/meshes/: FR05-H101.stl  HN05-i101.stl  HN05_N102.stp  link1.stl  link2.stl  link3.stl  link4.stl  mx-64.stl
arm_imitation/msg/: msg_joint_angles.msg
dart/: inverse_dynamics.py
esp32_bno055/: .gitignore  README.md
esp32_bno055/components/bno055/: CMakeLists.txt
esp32_bno055/components/bno055/include/: bno055_utils.h  i2c_utils.h
esp32_bno055/components/bno055/src/: bno055_utils.c  i2c_utils.c
esp32_mpu9250/: .gitignore
imu_joint_angle/: compl_filter.py  imu.csv
imu_joint_angle_sim/: compl_filter.py
rbdl_inverse_dynamics/: CMakeLists.txt  inv_dyn_from_urdf_and_angles_csv.cc  inv_dyn_urdf_test.cc  laukik_elbow.csv  manipuator4.urdf  manipulator.urdf  manipulator.xacro  manipulator4.urdf  manipulator4_meshed.urdf  manipulator4_meshed_test.urdf  manipulator_new.urdf  niryo_2motors_90deg_torque_ameya.ods  open_manipulator.urdf  openx_45_deg_turn_angle.csv  openx_complex_angle.csv  pytorque_1sec_100val.csv  pytorque_1sec_20val.csv  pytorque_90deg_100val.csv  pytorque_90deg_20val.csv  pytorque_diff.csv  pytorque_grad.csv  pytorque_gradient.csv  pytorque_high_sampling.csv  pytorque_slow_sampling.csv  rbdl_real_time.cpp  rbdl_real_time.h  rbdlpy.py
resources/esp32_mpu9250/components/mpu9250/: CMakeLists.txt
resources/esp32_mpu9250/components/mpu9250/include/: inv_mpu.h  mpu9250.h
(+376 files in other folders)
